tests/ui/field_representing_types/bad-next.stderr
error: cannot use `_` in this position
  --> $DIR/bad-next.rs:27:40
   |
LL | fn fails1<T: Constraint>(_x: field_of!(<<T as WithAssoc>::Assoc as Special>::Assoc, field)) {}
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0609]: no field `other` on struct `Struct`
  --> $DIR/bad-next.rs:37:67
   |
LL |     let _: field_of!(<<T as WithAssoc>::Assoc as Special>::Assoc, other);
   |                                                                   ^^^^^ unknown field

error[E0609]: no field `other` on struct `Struct`
  --> $DIR/bad-next.rs:37:67
   |
LL |     let _: field_of!(<<T as WithAssoc>::Assoc as Special>::Assoc, other);
   |                                                                   ^^^^^ unknown field
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0609]: no field `other` on struct `Struct`
  --> $DIR/bad-next.rs:37:67
   |
LL |     let _: field_of!(<<T as WithAssoc>::Assoc as Special>::Assoc, other);
   |                                                                   ^^^^^ unknown field
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0609`.
